--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,8 +3,8 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_login">Login</string>
     <string name="recuperar_senha">Recuperar Senha</string>
-    <string name="title_activity_cartoes">Cartoes</string>
-    <string name="title_activity_lista_faturas">Lista_faturas</string>
+    <string name="title_activity_cartoes">Cartões</string>
+    <string name="title_activity_lista_faturas">Faturas</string>
     <string name="local">Americanas</string>
     <string name="preco">R$ 128,90</string>
     <string name="data">ONTEM</string>
